# rayleighpy

./: pyproject.toml  reinstall  setup.py
.github/workflows/: python-app.yml
examples/: bh_compare.py  bh_test.py  orient.py  pol_scatter.py
src/: fields.py  polarizability.py  transform.py  vectors.py
tests/: test_polarizability.py  test_transform.py
